plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.bankengine.catalog'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
    maven { url "https://repository.jboss.org/maven2/" }
}

dependencies {
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-oauth2-resource-server'
    implementation 'org.springframework.security:spring-security-oauth2-jose'

    // Drools Dependencies
    def droolsVersion = '8.44.2.Final'
    implementation "org.drools:drools-core:${droolsVersion}"
    implementation "org.drools:drools-compiler:${droolsVersion}"
    implementation "org.drools:drools-xml-support:${droolsVersion}"
    implementation "org.kie:kie-api:${droolsVersion}"
    implementation "org.kie:kie-ci:${droolsVersion}"

    //Springdoc-OpenAPI for Swagger UI and Docs
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // --- Data Persistence (JPA) ---
    // Essential for your models (Product, FeatureComponent, etc.)
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // --- Database Driver ---
    // Use PostgreSQL for a robust system
    // runtimeOnly 'org.postgresql:postgresql'

    // --- Database Driver: H2 for Development ---
    runtimeOnly 'com.h2database:h2'

    // --- Utilities (Lombok is highly recommended for cleaner code) ---
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Lombok MapStruct Integration Processor (Required when using both Lombok and MapStruct)
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0' // Use the latest stable version

    // --- Testing ---
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}